--- a/InventoryManagementApp/InventoryManagementApp.entitlements
+++ b/InventoryManagementApp/InventoryManagementApp.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.inventory.InventoryManagementApp</string>
+		<string>group.Isabelle.InventoryManagementApp</string>
 	</array>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
